expanded.rs

extern "C" {
    pub fn janet_table_put(t: *mut JanetTable, key: Janet, value: Janet);
}
extern "C" {
    pub fn janet_table_to_struct(t: *mut JanetTable) -> JanetStruct;
}
extern "C" {
    pub fn janet_table_merge_table(table: *mut JanetTable, other: *mut JanetTable);
}
extern "C" {
    pub fn janet_table_merge_struct(table: *mut JanetTable, other: JanetStruct);
}
extern "C" {
    pub fn janet_table_find(t: *mut JanetTable, key: Janet) -> *mut JanetKV;
}
extern "C" {
    pub fn janet_table_clone(table: *mut JanetTable) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_table_clear(table: *mut JanetTable);
}
extern "C" {
    pub fn janet_fiber(
        callee: *mut JanetFunction,
        capacity: i32,
        argc: i32,
        argv: *const Janet,
    ) -> *mut JanetFiber;
}
extern "C" {
    pub fn janet_fiber_reset(
        fiber: *mut JanetFiber,
        callee: *mut JanetFunction,
        argc: i32,
        argv: *const Janet,
    ) -> *mut JanetFiber;
}
extern "C" {
    pub fn janet_fiber_status(fiber: *mut JanetFiber) -> JanetFiberStatus;
}
extern "C" {
    pub fn janet_current_fiber() -> *mut JanetFiber;
}
extern "C" {
    pub fn janet_root_fiber() -> *mut JanetFiber;
}
extern "C" {
    pub fn janet_indexed_view(
        seq: Janet,
        data: *mut *const Janet,
        len: *mut i32,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_bytes_view(
        str_: Janet,
        data: *mut *const u8,
        len: *mut i32,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_dictionary_view(
        tab: Janet,
        data: *mut *const JanetKV,
        len: *mut i32,
        cap: *mut i32,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_dictionary_get(data: *const JanetKV, cap: i32, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_dictionary_next(
        kvs: *const JanetKV,
        cap: i32,
        kv: *const JanetKV,
    ) -> *const JanetKV;
}
extern "C" {
    pub fn janet_abstract_begin(
        type_: *const JanetAbstractType,
        size: usize,
    ) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_abstract_end(abstractTemplate: *mut ::libc::c_void) -> JanetAbstract;
}
extern "C" {
    pub fn janet_abstract(type_: *const JanetAbstractType, size: usize) -> JanetAbstract;
}
pub type JanetModule = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut JanetTable),
>;
pub type JanetModconf = ::core::option::Option<
    unsafe extern "C" fn() -> JanetBuildConfig,
>;
extern "C" {
    pub fn janet_native(
        name: *const ::libc::c_char,
        error: *mut JanetString,
    ) -> JanetModule;
}
extern "C" {
    pub fn janet_marshal(
        buf: *mut JanetBuffer,
        x: Janet,
        rreg: *mut JanetTable,
        flags: ::libc::c_int,
    );
}
extern "C" {
    pub fn janet_unmarshal(
        bytes: *const u8,
        len: usize,
        flags: ::libc::c_int,
        reg: *mut JanetTable,
        next: *mut *const u8,
    ) -> Janet;
}
extern "C" {
    pub fn janet_env_lookup(env: *mut JanetTable) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_env_lookup_into(
        renv: *mut JanetTable,
        env: *mut JanetTable,
        prefix: *const ::libc::c_char,
        recurse: ::libc::c_int,
    );
}
extern "C" {
    pub fn janet_mark(x: Janet);
}
extern "C" {
    pub fn janet_sweep();
}
extern "C" {
    pub fn janet_collect();
}
extern "C" {
    pub fn janet_clear_memory();
}
extern "C" {
    pub fn janet_gcroot(root: Janet);
}
extern "C" {
    pub fn janet_gcunroot(root: Janet) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_gcunrootall(root: Janet) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_gclock() -> ::libc::c_int;
}
extern "C" {
    pub fn janet_gcunlock(handle: ::libc::c_int);
}
extern "C" {
    pub fn janet_gcpressure(s: usize);
}
extern "C" {
    pub fn janet_funcdef_alloc() -> *mut JanetFuncDef;
}
extern "C" {
    pub fn janet_thunk(def: *mut JanetFuncDef) -> *mut JanetFunction;
}
extern "C" {
    pub fn janet_verify(def: *mut JanetFuncDef) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_pretty(
        buffer: *mut JanetBuffer,
        depth: ::libc::c_int,
        flags: ::libc::c_int,
        x: Janet,
    ) -> *mut JanetBuffer;
}
extern "C" {
    pub fn janet_try_init(state: *mut JanetTryState);
}
extern "C" {
    pub fn janet_restore(state: *mut JanetTryState);
}
extern "C" {
    pub fn janet_equals(x: Janet, y: Janet) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_hash(x: Janet) -> i32;
}
extern "C" {
    pub fn janet_compare(x: Janet, y: Janet) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_cstrcmp(
        str_: JanetString,
        other: *const ::libc::c_char,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_in(ds: Janet, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_get(ds: Janet, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_next(ds: Janet, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_getindex(ds: Janet, index: i32) -> Janet;
}
extern "C" {
    pub fn janet_length(x: Janet) -> i32;
}
extern "C" {
    pub fn janet_lengthv(x: Janet) -> Janet;
}
extern "C" {
    pub fn janet_put(ds: Janet, key: Janet, value: Janet);
}
extern "C" {
    pub fn janet_putindex(ds: Janet, index: i32, value: Janet);
}
extern "C" {
    pub fn janet_wrap_number_safe(x: f64) -> Janet;
}
extern "C" {
    pub fn janet_keyeq(x: Janet, cstring: *const ::libc::c_char) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_streq(x: Janet, cstring: *const ::libc::c_char) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_symeq(x: Janet, cstring: *const ::libc::c_char) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_sorted_keys(
        dict: *const JanetKV,
        cap: i32,
        index_buffer: *mut i32,
    ) -> i32;
}
extern "C" {
    pub fn janet_init() -> ::libc::c_int;
}
extern "C" {
    pub fn janet_deinit();
}
extern "C" {
    pub fn janet_vm_alloc() -> *mut JanetVM;
}
extern "C" {
    pub fn janet_local_vm() -> *mut JanetVM;
}
extern "C" {
    pub fn janet_vm_free(vm: *mut JanetVM);
}
extern "C" {
    pub fn janet_vm_save(into: *mut JanetVM);
}
extern "C" {
    pub fn janet_vm_load(from: *mut JanetVM);
}
extern "C" {
    pub fn janet_interpreter_interrupt(vm: *mut JanetVM);
}
extern "C" {
    pub fn janet_continue(
        fiber: *mut JanetFiber,
        in_: Janet,
        out: *mut Janet,
    ) -> JanetSignal;
}
extern "C" {
    pub fn janet_continue_signal(
        fiber: *mut JanetFiber,
        in_: Janet,
        out: *mut Janet,
        sig: JanetSignal,
    ) -> JanetSignal;
}
extern "C" {
    pub fn janet_pcall(
        fun: *mut JanetFunction,
        argn: i32,
        argv: *const Janet,
        out: *mut Janet,
        f: *mut *mut JanetFiber,
    ) -> JanetSignal;
}
extern "C" {
    pub fn janet_step(
        fiber: *mut JanetFiber,
        in_: Janet,
        out: *mut Janet,
    ) -> JanetSignal;
}
extern "C" {
    pub fn janet_call(fun: *mut JanetFunction, argc: i32, argv: *const Janet) -> Janet;
}
extern "C" {
    pub fn janet_mcall(
        name: *const ::libc::c_char,
        argc: i32,
        argv: *mut Janet,
    ) -> Janet;
}
extern "C" {
    pub fn janet_stacktrace(fiber: *mut JanetFiber, err: Janet);
}
extern "C" {
    pub fn janet_stacktrace_ext(
        fiber: *mut JanetFiber,
        err: Janet,
        prefix: *const ::libc::c_char,
    );
}
pub type JanetScratchFinalizer = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut ::libc::c_void),
>;
extern "C" {
    pub fn janet_smalloc(size: usize) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_srealloc(mem: *mut ::libc::c_void, size: usize) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_scalloc(nmemb: usize, size: usize) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_sfinalizer(mem: *mut ::libc::c_void, finalizer: JanetScratchFinalizer);
}
extern "C" {
    pub fn janet_sfree(mem: *mut ::libc::c_void);
}
pub const JanetBindingType_JANET_BINDING_NONE: JanetBindingType = 0;
pub const JanetBindingType_JANET_BINDING_DEF: JanetBindingType = 1;
pub const JanetBindingType_JANET_BINDING_VAR: JanetBindingType = 2;
pub const JanetBindingType_JANET_BINDING_MACRO: JanetBindingType = 3;
pub const JanetBindingType_JANET_BINDING_DYNAMIC_DEF: JanetBindingType = 4;
pub const JanetBindingType_JANET_BINDING_DYNAMIC_MACRO: JanetBindingType = 5;
pub type JanetBindingType = ::libc::c_uint;
#[repr(C)]
pub struct JanetBinding {
    pub type_: JanetBindingType,
    pub value: Janet,
    pub deprecation: JanetBinding__bindgen_ty_1,
}
#[automatically_derived]
impl ::core::marker::Copy for JanetBinding {}
#[automatically_derived]
impl ::core::clone::Clone for JanetBinding {
    #[inline]
    fn clone(&self) -> JanetBinding {
        let _: ::core::clone::AssertParamIsClone<JanetBindingType>;
        let _: ::core::clone::AssertParamIsClone<Janet>;
        let _: ::core::clone::AssertParamIsClone<JanetBinding__bindgen_ty_1>;
        *self
    }
}
pub const JanetBinding_JANET_BINDING_DEP_NONE: JanetBinding__bindgen_ty_1 = 0;
pub const JanetBinding_JANET_BINDING_DEP_RELAXED: JanetBinding__bindgen_ty_1 = 1;
pub const JanetBinding_JANET_BINDING_DEP_NORMAL: JanetBinding__bindgen_ty_1 = 2;
pub const JanetBinding_JANET_BINDING_DEP_STRICT: JanetBinding__bindgen_ty_1 = 3;
pub type JanetBinding__bindgen_ty_1 = ::libc::c_uint;
extern "C" {
    pub fn janet_def(
        env: *mut JanetTable,
        name: *const ::libc::c_char,
        val: Janet,
        documentation: *const ::libc::c_char,
    );
}
extern "C" {
    pub fn janet_var(
        env: *mut JanetTable,
        name: *const ::libc::c_char,
        val: Janet,
        documentation: *const ::libc::c_char,
    );
}
extern "C" {
    pub fn janet_cfuns(
        env: *mut JanetTable,
        regprefix: *const ::libc::c_char,
        cfuns: *const JanetReg,
    );
}
extern "C" {
    pub fn janet_cfuns_prefix(
        env: *mut JanetTable,
        regprefix: *const ::libc::c_char,
        cfuns: *const JanetReg,
    );
}
extern "C" {
    pub fn janet_resolve(
        env: *mut JanetTable,
        sym: JanetSymbol,
        out: *mut Janet,
    ) -> JanetBindingType;
}
extern "C" {
    pub fn janet_resolve_ext(env: *mut JanetTable, sym: JanetSymbol) -> JanetBinding;
}
extern "C" {
    pub fn janet_resolve_core(name: *const ::libc::c_char) -> Janet;
}
extern "C" {
    pub fn janet_cfuns_ext(
        env: *mut JanetTable,
        regprefix: *const ::libc::c_char,
        cfuns: *const JanetRegExt,
    );
}
extern "C" {
    pub fn janet_cfuns_ext_prefix(
        env: *mut JanetTable,
        regprefix: *const ::libc::c_char,
        cfuns: *const JanetRegExt,
    );
}
extern "C" {
    pub fn janet_def_sm(
        env: *mut JanetTable,
        name: *const ::libc::c_char,
        val: Janet,
        documentation: *const ::libc::c_char,
        source_file: *const ::libc::c_char,
        source_line: i32,
    );
}
extern "C" {
    pub fn janet_var_sm(
        env: *mut JanetTable,
        name: *const ::libc::c_char,
        val: Janet,
        documentation: *const ::libc::c_char,
        source_file: *const ::libc::c_char,
        source_line: i32,
    );
}
extern "C" {
    pub fn janet_register(name: *const ::libc::c_char, cfun: JanetCFunction);
}
extern "C" {
    pub fn janet_signalv(signal: JanetSignal, message: Janet) -> !;
}
extern "C" {
    pub fn janet_panicv(message: Janet) -> !;
}
extern "C" {
    pub fn janet_panic(message: *const ::libc::c_char) -> !;
}
extern "C" {
    pub fn janet_panics(message: JanetString) -> !;
}
extern "C" {
    pub fn janet_panicf(format: *const ::libc::c_char, ...) -> !;
}
extern "C" {
    pub fn janet_dynprintf(
        name: *const ::libc::c_char,
        dflt_file: *mut FILE,
        format: *const ::libc::c_char,
        ...
    );
}
extern "C" {
    pub fn janet_panic_type(x: Janet, n: i32, expected: ::libc::c_int) -> !;
}
extern "C" {
    pub fn janet_panic_abstract(x: Janet, n: i32, at: *const JanetAbstractType) -> !;
}
extern "C" {
    pub fn janet_arity(arity: i32, min: i32, max: i32);
}
